2007-05-23  George Giolfan  <georgegiolfan@yahoo.com>

	* ScrollChrome.cs: Added gripper drawing.