@@ -1,3 +1,7 @@
+2007-05-25  George Giolfan  <georgegiolfan@yahoo.com>
+
+	* ScrollChrome.cs: Added support for Padding.
+
 2007-05-23  George Giolfan  <georgegiolfan@yahoo.com>
 
 	* ScrollChrome.cs: Added gripper drawing.
